deploy/example3/ingress-demo-v3.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web3-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "apps-ingress-ip" # Requires: gcloud compute addresses create apps-ingress-ip --global
    networking.gke.io/managed-certificates: "web3-cert"
spec:
  rules:
    - host: web3.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: web2
              servicePort: 8080
